# ytscript

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/skills/ytscript/: SKILL.md
.claude/skills/ytscript/scripts/: get_transcript.py
docs/scripts/: auto_sync.md  get_transcript.md  sync_transcript.md  update_index.md
docs/spec/: PRD.md
scripts/: force_sync.sh  init_repo.sh
src/: auto_sync.py  sync_transcript.py  update_index.py
