[project]
name = "ytscript-public"
version = "0.1.0"
description = "Template repository for a git-backed YouTube transcript archiver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
